# libeot

./: .gitignore  EOT.c  EOT.h  EOTError.h  LICENSE  Makefile.am  PATENTS  README.md  configure.ac  eot2ttf.c  libeot.pc.in
inc/: libeot.h
inc/libeot/: EOT.h  EOTError.h  libeot.h
src/: EOT.c  EOT.h  EOTError.h  Makefile.am  eot2ttf.c  flags.h  libeot.c  libeot.h  trans_trip.py  triplet_encodings.c  triplet_encodings.h  writeFontFile.c  writeFontFile.h
src/ctf/: SFNTContainer.c  SFNTContainer.h  parseCTF.c  parseCTF.h  parseTTF.c  parseTTF.h
src/lzcomp/: AHUFF.H  BITIO.H  ERRCODES.H  LZCOMP.H  MTXMEM.H  ahuff.c  bitio.c  liblzcomp.c  liblzcomp.h  lzcomp.c  mtxmem.c
src/util/: logging.h  max.h  stream.c  stream.h
