#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libeot],[0.000],[brennanv@email.arizona.edu])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
: ${CFLAGS="--std=c99"}
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
